adaption of cr-service